Fixed logo cropping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ img { max-width: 100%; }
 /***** Top content *****/
 
 .inner-bg {
-    padding: 100px 0;
+    padding: 210px 0;
 }
 
 .top-content .text {
@@ -213,13 +213,13 @@ img { max-width: 100%; }
 }
 
 .top-content .text .logo {
-	padding-bottom: 40px;
+	padding-bottom: 20px;
 }
 
 .top-content .text .logo a {
 	display: inline-block;
 	width: 130px;
-	height: 69px;
+	height: 130px;
 	background: url(../img/logo.png) center center no-repeat;
 }
 
